@@ -18,33 +18,34 @@ import lombok.Getter;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Getter
 final class DefaultDfeServiceImpl extends DfeServiceFactory {
 
-    private final Collection<NfeService> nfeServices = ReflectionUtils.findAllClasses(PackageFinder.builder().packages(Collections.singleton("com.softart.dfe.components.sefaz.nfe")).assignables(Collections.singleton(NfeService.class)).excludeClasses(Collections.singleton(NfeAnService.class)).build()).stream().map(it -> (NfeService) ReflectionUtils.newInstance(it)).collect(Collectors.toList());
-    private final Collection<NfceService> nfceServices = ReflectionUtils.findAllClasses(PackageFinder.builder().packages(Collections.singleton("com.softart.dfe.components.sefaz.nfce")).assignables(Collections.singleton(NfceService.class)).build()).stream().map(it -> (NfceService) ReflectionUtils.newInstance(it)).collect(Collectors.toList());
-    private final Collection<CteService> cteServices = ReflectionUtils.findAllClasses(PackageFinder.builder().packages(Collections.singleton("com.softart.dfe.components.sefaz.cte")).assignables(Collections.singleton(CteService.class)).excludeClasses(Collections.singleton(CteAnService.class)).build()).stream().map(it -> (CteService) ReflectionUtils.newInstance(it)).collect(Collectors.toList());
-    private final Collection<MdfeService> mdfeServices = ReflectionUtils.findAllClasses(PackageFinder.builder().packages(Collections.singleton("com.softart.dfe.components.sefaz.mdfe")).assignables(Collections.singleton(MdfeService.class)).build()).stream().map(it -> (MdfeService) ReflectionUtils.newInstance(it)).collect(Collectors.toList());
+    private final Collection<NfeService> nfeServices = ReflectionUtils.findAllClasses(PackageFinder.builder().packages(Collections.singleton("com.softart.dfe.components.sefaz.nfe")).assignables(Collections.singleton(NfeService.class)).excludeClasses(Collections.singleton(NfeAnService.class)).build()).stream().map(it -> (NfeService) ReflectionUtils.newInstance(it)).toList();
+    private final Collection<NfceService> nfceServices = ReflectionUtils.findAllClasses(PackageFinder.builder().packages(Collections.singleton("com.softart.dfe.components.sefaz.nfce")).assignables(Collections.singleton(NfceService.class)).build()).stream().map(it -> (NfceService) ReflectionUtils.newInstance(it)).toList();
+    private final Collection<CteService> cteServices = ReflectionUtils.findAllClasses(PackageFinder.builder().packages(Collections.singleton("com.softart.dfe.components.sefaz.cte")).assignables(Collections.singleton(CteService.class)).excludeClasses(Collections.singleton(CteAnService.class)).build()).stream().map(it -> (CteService) ReflectionUtils.newInstance(it)).toList();
+    private final Collection<MdfeService> mdfeServices = ReflectionUtils.findAllClasses(PackageFinder.builder().packages(Collections.singleton("com.softart.dfe.components.sefaz.mdfe")).assignables(Collections.singleton(MdfeService.class)).build()).stream().map(it -> (MdfeService) ReflectionUtils.newInstance(it)).toList();
 
     @Override
     public NfceService getNfceService(NfceConfig config) throws NoProviderFound, SoapServiceGeneralException {
-        return ReflectionUtils.newInstance(getNfceServices().stream().filter(it -> it.allow(config.webServiceUF(), config.environment(), config.emission())).findFirst().orElseThrow(NoProviderFound::new).getClass()).withSoapService(SoapService.getInstance().getNfceSoapService(config));
+        return Optional.ofNullable(ReflectionUtils.newInstance(getNfceServices().stream().filter(it -> it.allow(config.webServiceUF(), config.environment(), config.emission())).findFirst().orElseThrow(NoProviderFound::new).getClass())).orElseThrow(NoProviderFound::new).withSoapService(SoapService.getInstance().getNfceSoapService(config));
     }
 
     @Override
     public NfeService getNfeService(NfeConfig config) throws NoProviderFound, SoapServiceGeneralException {
-        return ReflectionUtils.newInstance(getNfeServices().stream().filter(it -> it.allow(config.webServiceUF(), config.environment(), config.emission())).findFirst().orElseThrow(NoProviderFound::new).getClass()).withSoapService(SoapService.getInstance().getNfeSoapService(config));
+        return Optional.ofNullable(ReflectionUtils.newInstance(getNfeServices().stream().filter(it -> it.allow(config.webServiceUF(), config.environment(), config.emission())).findFirst().orElseThrow(NoProviderFound::new).getClass())).orElseThrow(NoProviderFound::new).withSoapService(SoapService.getInstance().getNfeSoapService(config));
     }
 
     @Override
     public CteService getCteService(CteConfig config) throws NoProviderFound, SoapServiceGeneralException {
-        return ReflectionUtils.newInstance(getCteServices().stream().filter(it -> it.allow(config.webServiceUF(), config.environment(), config.emission())).findFirst().orElseThrow(NoProviderFound::new).getClass()).withSoapService(SoapService.getInstance().getCteSoapService(config));
+        return Optional.ofNullable(ReflectionUtils.newInstance(getCteServices().stream().filter(it -> it.allow(config.webServiceUF(), config.environment(), config.emission())).findFirst().orElseThrow(NoProviderFound::new).getClass())).orElseThrow(NoProviderFound::new).withSoapService(SoapService.getInstance().getCteSoapService(config));
     }
 
     @Override
     public MdfeService getMdfeService(MdfeConfig config) throws NoProviderFound, SoapServiceGeneralException {
-        return ReflectionUtils.newInstance(getMdfeServices().stream().filter(it -> it.allow(config.webServiceUF(), config.environment(), config.emission())).findFirst().orElseThrow(NoProviderFound::new).getClass()).withSoapService(SoapService.getInstance().getMdfeSoapService(config));
+        return Optional.ofNullable(ReflectionUtils.newInstance(getMdfeServices().stream().filter(it -> it.allow(config.webServiceUF(), config.environment(), config.emission())).findFirst().orElseThrow(NoProviderFound::new).getClass())).orElseThrow(NoProviderFound::new).withSoapService(SoapService.getInstance().getMdfeSoapService(config));
     }
 }
